--- a/day 15/note.ipynb
+++ b/day 15/note.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "# 2 flask web framework\n",
     "\n",
-    "# 3 tkinter desktop gui"
+    "# 3 tkinter desktop gui, pyQt \n",
+    "\n",
+    "# 4 google chart + flask,  ploty"
    ]
   },
   {
@@ -20,7 +22,7 @@
    "metadata": {},
    "source": [
     "mg phone : flask, pandas plot\n",
-    "flask dashborad "
+    "flask dashborad"
    ]
   }
  ],
